kustomize/base/spring-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring
  name: spring
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - image: imageName
        name: spring
        ports:
        - containerPort: 8080
          protocol: TCP
