kustomize/base/spring-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring
  name: spring
spec:
  port:
    targetPort: 8080-tcp
  subdomain: spring
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: spring
    weight: 100
